# multiclass-classification

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py  serve.py
config/: main.yaml
config/model/: model.yaml
data/processed/: final_selection.csv
mlruns/0/: meta.yaml
mlruns/0/1b245187a19d4719b1a7d38e8620caba/: meta.yaml
mlruns/0/1b245187a19d4719b1a7d38e8620caba/params/: colsample_bytree  gamma
mlruns/0/1b245187a19d4719b1a7d38e8620caba/tags/: mlflow.source.name
mlruns/0/8030303696bd4df99c666c97e67f2c48/: meta.yaml
mlruns/0/8030303696bd4df99c666c97e67f2c48/artifacts/model/: MLmodel  conda.yaml  requirements.txt
mlruns/0/8030303696bd4df99c666c97e67f2c48/metrics/: principal_components  test accuracy_score  test f1 score  train accuracy_score  train f1 score  variance threshold
mlruns/0/8030303696bd4df99c666c97e67f2c48/params/: colsample_bytree  gamma
mlruns/0/8030303696bd4df99c666c97e67f2c48/tags/: mlflow.log-model.history
mlruns/0/bf22aba589304d9e988d9abfbf19001f/: meta.yaml
mlruns/0/bf22aba589304d9e988d9abfbf19001f/artifacts/model/: MLmodel
mlruns/0/bf22aba589304d9e988d9abfbf19001f/metrics/: accuracy_score
mlruns/0/bf22aba589304d9e988d9abfbf19001f/tags/: mlflow.log-model.history
mlruns/0/caaa9a3bfc8849cdb916733aad8f7625/: meta.yaml
mlruns/0/caaa9a3bfc8849cdb916733aad8f7625/metrics/: test accuracy_score  test f1 score  train accuracy_score  train f1 score
mlruns/0/caaa9a3bfc8849cdb916733aad8f7625/params/: colsample_bytree  gamma
mlruns/0/caaa9a3bfc8849cdb916733aad8f7625/tags/: mlflow.log-model.history  mlflow.source.git.commit
models/: feat  label_enc  one_hot  pca  vars
notebooks/: EDA.ipynb  Exploration.ipynb
src/: feature_engineer.py  feature_main.py  process.py  train_model.py  utils.py
tests/: test_process.py
(+1 files in other folders)
